--- a/ReadMe
+++ b/ReadMe
@@ -18,7 +18,7 @@ This project is detecting items using webcam
 I will modify on the same code to detect items from recorded video 
 ![Bikes Demo Video](Video GIF/Yolo bikes video detection.gif) ![cars Demo Video](Video GIF/Yolo cars video detection.gif)
 ![cars Demo Video](Video GIF/Yolo motorbike detection.gif)     ![cars Demo Video](Video GIF/Yolo people video detection.gif)
-
+<img src="Video GIF/Yolo people video detection.gif" width="500"/>
 Running Yolo with GPUs
 
 Make docker file for the pytorch 
